SweetAlert is using fade to animate, fixing Select z-index when opened

--- a/engine/lithium/builder/admin.less
+++ b/engine/lithium/builder/admin.less
@@ -167,3 +167,7 @@
     }
   }
 }
+
+.bootstrap-select.open {
+  z-index: 9999;
+}
